# ubuntu-installer

./: Cargo.toml  build.rs  ubuntu-installer.exe.manifest  ubuntu-installer.rc
bindings/: Cargo.toml  gen.bat
src/: desktopwindowxamlsource.rs  interop.rs  main.rs  window_target.rs  wizard.rs
