[package]
name = "ubuntu-installer"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { path = "../winrt-rs" }
bindings = { path = "./bindings" }
raw-window-handle = "0.3.3"
winit = "0.22"

[build-dependencies]
embed-resource = "1.3"