[package]
name = "ubuntu-installer"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }
bindings = { path = "./bindings" }
raw-window-handle = "0.3.3"
winit = "0.22"
winapi = { version = "0.3", features = ["fileapi"] }
widestring = "0.4"
reqwest = { version = "0.10", features = ["stream"] }
tokio = { version = "0.2", features = ["fs"] }
tempfile = "3.1"

[build-dependencies]
embed-resource = "1.3"